add extra layering docs

--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -128,6 +128,7 @@
           <li><a href="{% link _docs/layering/mix.md %}">Mix</a></li>
           <li><a href="{% link _docs/layering/merge-dsl.md %}">Merge DSL</a></li>
           <li><a href="{% link _docs/layering/merge-options.md %}">Merge Options</a></li>
+          <li><a href="{% link _docs/layering/extra.md %}">Extra Layering</a></li>
         </ul>
       </li>
       <li><a href="{% link _docs/dsl.md %}">DSL</a>
